Remove JDK download routine